--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,7 @@
               <div class="form-group floating-label-form-group controls">
                 <label>Message</label>
                 <textarea rows="5" class="form-control" placeholder="Message" id="message" name="Message" required data-validation-required-message="Please enter a message."></textarea>
+                <input type="hidden" name="_next" value="http://orgazmiclife.com/"/>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
