Updated home and contct pages

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Orgazmic Life</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,14 +28,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="index.html">Orgazmic Life</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -43,9 +43,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="post.html">Sample Post</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Let's talk</a>
             </li>
           </ul>
         </div>
@@ -53,13 +53,13 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/Happy-girl.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="page-heading">
-              <h1>Contact Me</h1>
-              <span class="subheading">Have questions? I have answers (maybe).</span>
+              <h1></h1>
+              <span class="subheading"></span>
             </div>
           </div>
         </div>
@@ -70,7 +70,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
+          <p>For people who watched all my videos and ready for a big trasformation to happen that will lead to a truly orgasmic life, I am offering a private consultation. Format - online video call. Techniques - deep real conversation + energy work. Duration - 1 to 2 hours. Price - $100. Fill out the form and I will reach out to you.
+        <p style="font-style:italic">"Lyuba is a masterful energy worker. I've had 3 sessions with Lyuba and each one came right before key transitions in my life. It's difficult to know if they are related, but for me, there is no doubt. She creates energy circuits and allows a tremendous amount of life-force chi circulate through my body and system. In my mind, this clears out all the undigested junk that no longer serves a purpose but still clings on and weighs me down. I feel lighter and freer at the end of the session, which irrevocably changes my life. And although it's hard to explain, what Lyuba does is also more than just energy clearing. It's like she actually sees the true me and brings me the energy I specifically need for my purpose and expression in this life. It's a form of ultimate clarifying, empowering, and directing, that has a huge impact on my life and I find so incredibly needed in this multi-choice, overwhelming world. I highly trust and recommend Lyuba to anyone who is willing to let go and let her gentle voice and focusing techniques guide you."
+         </p>
+         <p> --- Gen Schaad </p>
+          </p>
           <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
           <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
           <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
@@ -122,7 +126,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
+            <!-- <ul class="list-inline text-center">
               <li class="list-inline-item">
                 <a href="#">
                   <span class="fa-stack fa-lg">
@@ -147,8 +151,8 @@
                   </span>
                 </a>
               </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+            </ul> -->
+            <!-- <p class="copyright text-muted">Copyright &copy; Your Website 2017</p> -->
           </div>
         </div>
       </div>
