--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Welcome to Orgazmic Life channel! <p>We are in discussion here of how to make all areas of our life more satisfying and enjoyable. The biggest value is authenticity! Jump in and share your opinion in the comments.</p>
-          <iframe width="424" height="238" src="https://www.youtube.com/embed/FcTZ2TJLuow" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <p>Orgazmic Energy Workshop. Sign up <a href="https://www.eventbrite.com/e/orgasmic-energy-workshop-tickets-54186664773" here</a> - </p>
+          <iframe width="424" height="238" src="https://youtu.be/TE_-YdynXuU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
