--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Orgazmic Energy Workshop. Sign up <a href="https://www.eventbrite.com/e/orgasmic-energy-workshop-tickets-54186664773" here</a> - </p>
-          <iframe width="424" height="238" src="https://youtu.be/TE_-YdynXuU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/TE_-YdynXuU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
