--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Orgazmic Energy Workshop. Sign up <a href="https://www.eventbrite.com/e/orgasmic-energy-workshop-tickets-54186664773">here</a></p>
+          <p>Orgazmic Energy Workshop. Sign up <a href="https://www.eventbrite.com/e/orgasmic-energy-workshop-tickets-54186664773">here</a>.</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/TE_-YdynXuU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
