--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Orgasmic Energy Workshop. Sign up <a href="https://www.eventbrite.com/e/orgasmic-energy-workshop-tickets-54186664773" target="_blank">here</a>.</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/TE_-YdynXuU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p><b>Our mission</b> - to help human beings become free from fears, other people’s opinions, body and soul sicknesses, and insults. When more people learn how to find pure joy and happiness within themselves, then all the cruelty and wars will stop in the world.</p>
         </div>
       </div>
     </div>
